examples/datalog/09_recursion/25_counting_paths.dl
% Test: Counting paths in DAG
% Expected: Can count distinct paths
% Category: 09_recursion
% Priority: P2 - Recursion patterns

.kg create test_count_paths
.kg use test_count_paths

% DAG with multiple paths
+edge[(1, 2), (1, 3), (2, 4), (3, 4), (2, 5), (4, 5)].

% All paths to each node
+path(X, Y) :- edge(X, Y).
+path(X, Z) :- path(X, Y), edge(Y, Z).

?- path(X, Y).

% Count incoming paths per node
+incoming(Node, <COUNT:Src>) :- path(Src, Node).

?- incoming(Node, Count).

.kg use default
.kg drop test_count_paths
